mesos dns working. need to update dhcp, adding marathon.mesos as search domain.

--- a/coreos/fleet/mesosphere/mesos-slave@.service
+++ b/coreos/fleet/mesosphere/mesos-slave@.service
@@ -14,5 +14,5 @@ ExecStop=/usr/bin/docker stop %p-%i
 TimeoutStartSec=900s
 
 [X-Fleet]
-Conflicts=mesos-slave@*.service
+Conflicts=mesos-slave*
 MachineMetadata=role=worker
