--- a/coreos/cloud-config/utility-cloud-config.yml
+++ b/coreos/cloud-config/utility-cloud-config.yml
@@ -63,6 +63,13 @@ write_files:
        t+/Cha7Fv0OpCUHLPI0ScF0YWbU4nF2LSw==
        -----END CERTIFICATE-----
 
+  - path: /tmp/get-docker-registry-login.sh
+     permissions: 0644
+     owner: root
+     content: |
+       cd /etc
+       wget http://10.105.255.249:8080/files/dsra/docker.tar.gz
+
   - path: /tmp/reset-interfaces
     permissions: 0700
     owner: root:root
@@ -73,6 +80,7 @@ write_files:
      ip link set eno2 down
      systemctl restart systemd-networkd
      logger "Done reseting network, now with bonding."
+
   - path: /etc/systemd/network/10-eno1.network
     permissions: 0644
     owner: root
@@ -82,6 +90,7 @@ write_files:
 
       [Network]
       Bond=bond0
+
   - path: /etc/systemd/network/11-eno2.network
     permissions: 0644
     owner: root
@@ -91,6 +100,7 @@ write_files:
 
       [Network]
       Bond=bond0
+
   - path: /etc/systemd/network/20-bond.netdev
     permissions: 0644
     owner: root
@@ -98,6 +108,7 @@ write_files:
       [NetDev]
       Name=bond0
       Kind=bond
+
   - path: /etc/systemd/network/30-setup-bonded-dhcp.network
     permissions: 0644
     owner: root
@@ -139,6 +150,19 @@ coreos:
       User=root
       Type=oneshot
       ExecStart=/tmp/get_ip.sh
+
+  - name: setup-docker-registry-login.service
+    command: start
+    content: |
+      [Unit]
+      Description=Setup Docker Registry Login for Marathon
+      Before=docker.service
+   
+      [Service]
+      User=root
+      Type=oneshot
+      ExecStart=/tmp/get-docker-registry-login.sh
+
   - name: reset-interfaces.service
     command: start
     content: |
