--- a/coreos/cloud-config/utility-cloud-config.yml
+++ b/coreos/cloud-config/utility-cloud-config.yml
@@ -64,11 +64,12 @@ write_files:
        -----END CERTIFICATE-----
 
   - path: /tmp/get-docker-registry-login.sh
-     permissions: 0644
-     owner: root
-     content: |
-       cd /etc
-       wget http://10.105.255.249:8080/files/dsra/docker.tar.gz
+    permissions: 0644
+    owner: root:root
+    content: |
+      #!/bin/bash
+      cd /etc
+      wget http://10.105.255.249:8080/files/dsra/docker.tar.gz
 
   - path: /tmp/reset-interfaces
     permissions: 0700
