Moved /data --> /var/lib/docker/volumes

--- a/coreos/cloud-config/utility-cloud-config.yml
+++ b/coreos/cloud-config/utility-cloud-config.yml
@@ -153,7 +153,7 @@ coreos:
       [Unit]
       Description=Setup Docker Registry Login for Marathon
       Before=docker.service
-   
+
       [Service]
       User=root
       Type=oneshot
@@ -186,14 +186,14 @@ coreos:
         What=/dev/sda
         Where=/var/lib/docker
         Type=btrfs
-  - name: data.mount
+  - name: var-lib-docker-volumes.mount
     command: start
     content: |
         [Unit]
-        Description=Mount data
+        Description=Mount Docker Volumes
         [Mount]
         What=/dev/sdb
-        Where=/data
+        Where=/var/lib/docker/volumes
         Type=btrfs
 
 ssh_authorized_keys:
