--- a/docker/hadoop/hdfs/hdfs-site.xml.template
+++ b/docker/hadoop/hdfs/hdfs-site.xml.template
@@ -27,7 +27,7 @@
   </property>
   <property>
     <name>dfs.namenode.name.dir</name>
-    <value>file:///data/hdfs/nn</value>
+    <value>/data/hdfs/nn</value>
     <description>Path on the local filesystem where the NameNode stores the namespace and transaction logs persistently.</description>
   </property>
 
@@ -38,14 +38,14 @@
   </property>
   <property>
     <name>dfs.journalnode.edits.dir</name>
-    <value>file:///data/hdfs/journal</value>
+    <value>/data/hdfs/journal</value>
   </property>
   <!-- Journal Nodes -->
 
   <!-- Data Nodes -->
   <property>
     <name>dfs.datanode.data.dir</name>
-    <value>file:///data/hdfs/dn</value>
+    <value>/data/hdfs/dn</value>
     <description>Comma separated list of paths on the local filesystem of a DataNode where it should store its blocks.</description>
   </property>
   <!-- Data Nodes -->
