--- a/docker/hadoop/hdfs/hdfs-site.xml.template
+++ b/docker/hadoop/hdfs/hdfs-site.xml.template
@@ -57,7 +57,7 @@
   </property>
   <property>
     <name>ha.zookeeper.quorum</name>
-    <value>ZKNODES</value>
+    <value>ZK_IPS</value>
   </property>
   <!-- Zookeeper failover -->
 
@@ -94,7 +94,7 @@
     <value>true</value>
   </property>
 
-  <!-- Short-Circuit local reads -->
+<!-- Short-Circuit local reads
   <property>
     <name>dfs.client.read.shortcircuit</name>
     <value>true</value>
@@ -115,7 +115,7 @@
     <name>dfs.domain.socket.path</name>
     <value>/var/run/hadoop-hdfs/dn._PORT</value>
   </property>
-  <!-- Short-Circuit local reads -->
+Short-Circuit local reads -->
 
   <!-- Block location tracking -->
   <property>
