--- a/docker/mesos-dns/Dockerfile
+++ b/docker/mesos-dns/Dockerfile
@@ -1,5 +1,5 @@
 FROM mesosphere/mesos-dns
 MAINTAINER Matt Parker <matthew.parker@l-3com.com>
-ADD dsrac.json /config.json
+ADD dsra-mesos-dns.json /config.json
 EXPOSE 53
 CMD ["/mesos-dns"]
