--- a/coreos/cloud-config/worker-cloud-config.yml
+++ b/coreos/cloud-config/worker-cloud-config.yml
@@ -32,7 +32,7 @@ write-files:
     content: |
       #!/bin/bash
       cd /etc
-      wget http://10.105.255.249:8080/files/dsra/docker.tar.gz
+      wget http://10.105.255.249:8080/dsra/repo/registry/docker.tar.gz
 
 coreos:
   etcd2:
