Working tomcat file server service for hub on 8080.

--- a/docker/file-server/Dockerfile
+++ b/docker/file-server/Dockerfile
@@ -1,7 +1,7 @@
 FROM tutum/tomcat:latest 
 MAINTAINER Matt Parker <matthew.parker@l-3com.com>
 
-ADD dsra#repo.xml $CATALINA_HOME/conf/Catalina/hub.dsra.local/dsra#repo.xml
+ADD server.xml $CATALINA_HOME/conf/server.xml
 
 
 
