--- a/docker/hadoop/hdfs/core-site.xml.template
+++ b/docker/hadoop/hdfs/core-site.xml.template
@@ -4,6 +4,11 @@
     <value>hdfs://CLUSTER_NAME</value>
   </property>
 
+  <property>
+    <name>ha.zookeeper.quorum</name>
+    <value>ZK_IPS</value>
+  </property>
+
   <!-- Trash minutes to allow recover of deleted files-->
   <property>
     <name>fs.trash.interval</name>
