--- a/docker/haproxy/dsra.haproxy.cfg
+++ b/docker/haproxy/dsra.haproxy.cfg
@@ -6,51 +6,22 @@
 # 
 
 global
-    log /dev/log    local0
-    log /dev/log    local1 notice
-    chroot /var/lib/haproxy
-    stats socket /run/haproxy/admin.sock mode 660 level admin
-    stats timeout 30s
-    user haproxy
-    group haproxy
-    daemon
-
-    # Default SSL material locations
-    ca-base /etc/ssl/certs
-    crt-base /etc/ssl/private
-
-    # Default ciphers to use on SSL-enabled listening sockets.
-    # For more information, see ciphers(1SSL).
-    ssl-default-bind-ciphers kEECDH+aRSA+AES:kRSA+AES:+AES256:RC4-SHA:!kEDH:!LOW:!EXP:!MD5:!aNULL:!eNULL
+  daemon
+  maxconn 100
 
 defaults
-    log     global
-    mode    http
-    option  httplog
-    option  dontlognull
-    timeout connect 5000
-    timeout client  50000
-    timeout server  50000
-    errorfile 400 /etc/haproxy/errors/400.http
-    errorfile 403 /etc/haproxy/errors/403.http
-    errorfile 408 /etc/haproxy/errors/408.http
-    errorfile 500 /etc/haproxy/errors/500.http
-    errorfile 502 /etc/haproxy/errors/502.http
-    errorfile 503 /etc/haproxy/errors/503.http
-    errorfile 504 /etc/haproxy/errors/504.http
+  mode http
+  timeout connect 5000ms
+  timeout client 50000ms
+  timeout server 50000ms
 
-frontend localnodes
+frontend hub
    bind *:8080
    mode http
-   default_backend nodes
+   default_backend marathon
 
 backend marathon
-   mode http
-   option forwardfor
-   http-request set-header X-Forwarded-Port %[dst_port]
-   http-request add-header X-Forwarded-Proto https if { ssl_fc }
-   option httpchk HEAD / HTTP/1.1\r\nHost:localhost
    balance roundrobin
+   mode http
    server marathon1 10.105.0.1:8080 check
-   server marathon2 10.105.0.3:8000 check
-
+   server marathon2 10.105.0.9:8000 check
