--- a/coreos/fleet/mesosphere/marathon2.service
+++ b/coreos/fleet/mesosphere/marathon2.service
@@ -7,7 +7,7 @@ Requires=docker.service
 ExecStartPre=-/usr/bin/docker kill marathon2
 ExecStartPre=-/usr/bin/docker rm marathon2
 ExecStartPre=/usr/bin/docker pull mesosphere/marathon
-ExecStart=/usr/bin/docker run --net=bridge --name marathon2 -p 8282:8282 -p 9090:9090 -e MARATHON_ZK='zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/marathon' -e MARATHON_MASTER='zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos' mesosphere/marathon --checkpoint
+ExecStart=/usr/bin/docker run --net=bridge --name marathon2 -p 8080:8080 -p 8282:8282 -p 9090:9090 -e MARATHON_ZK='zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/marathon' -e MARATHON_MASTER='zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos' mesosphere/marathon --checkpoint
 
 ExecStop=/usr/bin/docker stop marathon2
 TimeoutStartSec=900s
