--- a/coreos/fleet/mesosphere/mesos-master@.service
+++ b/coreos/fleet/mesosphere/mesos-master@.service
@@ -7,7 +7,7 @@ Requires=docker.service
 ExecStartPre=-/usr/bin/docker kill %p-%i
 ExecStartPre=-/usr/bin/docker rm %p-%i
 ExecStartPre=/usr/bin/docker pull mesosphere/mesos-master:0.23.0-1.0.ubuntu1404
-ExecStart=/usr/bin/docker run --net=host --name %p-%i -v /data/log/mesos-master:/var/log/mesos -e 'MESOS_LOG_DIR=/var/log/mesos' -e 'MESOS_ZK=zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos' -e 'MESOS_CLUSTER=DSRA' -e 'MESOS_QUORUM=2' -p 5050:5050 mesosphere/mesos-master:0.23.0-1.0.ubuntu1404
+ExecStart=/usr/bin/docker run --net=host --name %p-%i -v /data/log/mesos-master:/var/log/mesos -e 'MESOS_LOG_DIR=/var/log/mesos' -e 'MESOS_ZK=zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos' -e 'MESOS_CLUSTER=DSRA' -e 'MESOS_QUORUM=2' -e 'MESOS_RESOURCES=cpus(*):40; mem(*):385795; disk(*):1.13894e+06; ports(*):[53-53,443-443,80-80,5000-9999,31000-32000]' -p 5050:5050 mesosphere/mesos-master:0.23.0-1.0.ubuntu1404
 ExecStop=/usr/bin/docker stop %p-%i
 TimeoutStartSec=900s
 
