Moving services around to accomodate the haproxy

--- a/docker/haproxy/dsra.haproxy.cfg
+++ b/docker/haproxy/dsra.haproxy.cfg
@@ -18,10 +18,10 @@ defaults
 frontend hub
    bind *:8080
    mode http
-   default_backend marathon
+   default_backend marathon-backend
 
-backend marathon
+backend marathon-backend
    balance roundrobin
    mode http
-   server marathon1 10.105.0.1:8080 check
-   server marathon2 10.105.0.9:8000 check
+   server marathon1 marathon1.dsra.local:8080 check
+   server marathon2 marathon2.dsra.local:8000 check
