Modified marathon and haproxy to work on port 80

--- a/docker/haproxy/dsra.haproxy.cfg
+++ b/docker/haproxy/dsra.haproxy.cfg
@@ -6,22 +6,34 @@
 # 
 
 global
-  daemon
   maxconn 100
+  log 127.0.0.1 local0 info
+  log 127.0.0.1 local1 notice
+  user root
+  group root
 
 defaults
+  log global
   mode http
-  timeout connect 5000ms
-  timeout client 50000ms
-  timeout server 50000ms
+  option httplog
+  option dontlognull
+  option forwardfor
+  retries 3
+  timeout http-request 10s
+  timeout queue 1m
+  timeout connect 5s
+  timeout client 2m
+  timeout server 2m
+  timeout http-keep-alive 10s
+timeout check 5s
 
 frontend hub
-   bind *:8080
+   bind *:80
    mode http
-   default_backend marathon-backend
+   default_backend marathon-uis
 
-backend marathon-backend
+backend marathon-uis
    balance roundrobin
    mode http
-   server marathon1 marathon1.dsra.local:8080 check
-   server marathon2 marathon2.dsra.local:8000 check
+   server marathon1 marathon1.dsra.local
+   server marathon2 marathon2.dsra.local
