Added 8022 as the service RPN port Added --net=host cmd lines examples
Added an zkfc "option" for the bootstrapping

For the startups, I moved the namenode to start as a daemon, and then run the zkfc in the foreground process.  Only issue, and may want to swap these..but, if the zkfc fails, the container will stop.

--- a/docker/hadoop/hdfs/hdfs-site.xml.template
+++ b/docker/hadoop/hdfs/hdfs-site.xml.template
@@ -22,6 +22,14 @@
     <value>NNODE2_IP:8020</value>
   </property>
   <property>
+    <name>dfs.namenode.servicerpc-address.CLUSTER_NAME.nn1</name>
+    <value>NNODE1_IP:8022</value>
+  </property>
+  <property>
+    <name>dfs.namenode.servicerpc-address.CLUSTER_NAME.nn2</name>
+    <value>NNODE2_IP:8022</value>
+  </property>
+  <property>
     <name>dfs.namenode.http-address.CLUSTER_NAME.nn1</name>
     <value>NNODE1_IP:50070</value>
   </property>
