--- a/docker/hadoop/hdfs/Dockerfile
+++ b/docker/hadoop/hdfs/Dockerfile
@@ -29,10 +29,8 @@ COPY bootstrap.sh /bin/bootstrap.sh
 # Have HDFS own everything
 RUN chown -R hdfs:hdfs /data/hdfs /usr/local/hadoop-2.7.1
 
-# Ports
-EXPOSE 8485 8480
-EXPOSE 8020 8022 50070 50470 50090 50495
-EXPOSE 1006 1004 50010 50020 50075 50475
+#Ports: Namenode                         DataNode                          Journal Node
+EXPOSE 8020 8022 50070 50470 50090 50495 1006 1004 50010 50020 50075 50475 8485 8480
 
 # Location to store data
 VOLUME ["/data/hdfs/dn", "/data/hdfs/journal", "/data/hdfs/nn"]
