--- a/coreos/fleet/hdfs/namenode2.service
+++ b/coreos/fleet/hdfs/namenode2.service
@@ -4,9 +4,9 @@ After=docker.service
 Requires=docker.service
 
 [Service]
-ExecStartPre=-/usr/bin/docker kill namenode2
+ExecStartPre=-/usr/bin/docker kill namenode
 ExecStartPre=/usr/bin/docker pull aarongdocker/hdfs
-ExecStart=/usr/bin/docker run --name namenode --hostname r105u03 -e ZK_IPS=r105u01:2181,r105u03:2181,r105u05:2181,r105u07:2181,r105u09:2181 -e JN_IPS=r105u01:8485,r105u03:8485,r105u05:8485,r105u07:8485,r105u09:8485 8020:8020 -p 8022:8022 -p 50070:50070 -p 50470:50470 -p 8019:8019 aarongdocker/hdfs standby
+ExecStart=/usr/bin/docker run --name namenode -it -e NNODE1_IP=r105u01 -e NNODE2_IP=r105u03 -e ZK_IPS=r105u01:2181,r105u03:2181,r105u05:2181,r105u07:2181,r105u09:2181 -e JN_IPS=r105u01:8485,r105u03:8485,r105u05:8485,r105u07:8485,r105u09:8485 --net=host aarongdocker/hdfs standby
 TimeoutStartSec=900s
 
 [X-Fleet]
