--- a/coreos/fleet/hdfs/journalnode.service
+++ b/coreos/fleet/hdfs/journalnode.service
@@ -6,7 +6,7 @@ Requires=docker.service
 [Service]
 ExecStartPre=-/usr/bin/docker kill journalnode
 ExecStartPre=/usr/bin/docker pull aarongdocker/hdfs
-ExecStart=/usr/bin/docker run -it --name journalnode -e NNODE1_IP=r105u01 -e NNODE2_IP=r105u03 -e ZK_IPS=r105u01:2181,r105u03:2181,r105u05:2181,r105u07:2181,r105u09:2181 -e JN_IPS=r105u01:8485,r105u03:8485,r105u05:8485,r105u07:8485,r105u09:8485 -p 8485:8485 -p 8480:8480 aarongdocker/hdfs journalnode
+ExecStart=/usr/bin/docker run --name journalnode -e NNODE1_IP=r105u01 -e NNODE2_IP=r105u03 -e ZK_IPS=r105u01:2181,r105u03:2181,r105u05:2181,r105u07:2181,r105u09:2181 -e JN_IPS=r105u01:8485,r105u03:8485,r105u05:8485,r105u07:8485,r105u09:8485 -p 8485:8485 -p 8480:8480 aarongdocker/hdfs journalnode
 TimeoutStartSec=900s
 
 [X-Fleet]
