--- a/docker/mesos-slave/Dockerfile
+++ b/docker/mesos-slave/Dockerfile
@@ -4,4 +4,7 @@ MAINTAINER Matt Parker <matthew.parker@l-3com.com>
 
 ADD http://apache.arvixe.com/spark/spark-1.5.0/spark-1.5.0-bin-hadoop2.6.tgz /opt/
 
+WORKDIR /opt
+
+RUN tar -xzf spark-1.5.0-bin-hadoop2.6.tgz
 
