--- a/coreos/fleet/hdfs/namenode2.service
+++ b/coreos/fleet/hdfs/namenode2.service
@@ -9,6 +9,7 @@ ExecStartPre=/usr/bin/docker pull aarongdocker/hdfs
 ExecStartPre=-/usr/bin/docker create --name namenode-data aarongdocker/hdfs /bin/true
 ExecStartPre=-/usr/bin/docker rm -v namenode
 ExecStart=/usr/bin/docker run --name namenode --restart on-failure:5 --volumes-from namenode-data -e CLUSTER_NAME=dsra -e NNODE1_IP=r105u01 -e NNODE2_IP=r105u03 -e ZK_IPS=r105u01:2181,r105u03:2181,r105u05:2181,r105u07:2181,r105u09:2181 -e JN_IPS=r105u01:8485,r105u03:8485,r105u05:8485,r105u07:8485,r105u09:8485 --net=host aarongdocker/hdfs standby
+ExecStop=/usr/bin/docker stop namenode
 TimeoutStartSec=900s
 
 [X-Fleet]
