--- a/docker/haproxy/dsra.haproxy.cfg
+++ b/docker/haproxy/dsra.haproxy.cfg
@@ -27,7 +27,15 @@ backend marathon_uis
     balance roundrobin
     server marathon1 marathon1.dsra.local
     server marathon2 marathon2.dsra.local
+    server marathon3 marathon3.dsra.local
+    server marathon4 marathon4.dsra.local
+    server marathon5 marathon5.dsra.local
 
 backend mesos_ui
-    server mesos_main 10.105.0.5:5050
+    balanace roundrobin
+    server mesos_main5 10.105.0.5:5050
+    server mesos_main7 10.105.0.7:5050
+    server mesos_main9 10.105.0.9:5050
+    server mesos_main3 10.105.0.3:5050
+    server mesos_main1 10.105.0.1:5050
   
