--- a/docker/haproxy/dsra.haproxy.cfg
+++ b/docker/haproxy/dsra.haproxy.cfg
@@ -6,34 +6,36 @@
 # 
 
 global
-  maxconn 100
-  log 127.0.0.1 local0 info
-  log 127.0.0.1 local1 notice
-  user root
-  group root
+    maxconn 100
+    debug
 
 defaults
-  log global
-  mode http
-  option httplog
-  option dontlognull
-  option forwardfor
-  retries 3
-  timeout http-request 10s
-  timeout queue 1m
-  timeout connect 5s
-  timeout client 2m
-  timeout server 2m
-  timeout http-keep-alive 10s
-timeout check 5s
-
+    mode http
+    log global
+    timeout connect 5s
+    timeout client 2m
+    timeout server 2m
+    
 frontend hub
-   bind *:80
-   mode http
-   default_backend marathon-uis
+    bind *:80
+    acl is_mesos_uri hdr(host) -i mesos
+    acl is_marathon_uri hdr(host) -i marathon
+    use_backend mesos_ui if is_mesos_uri 
+    use_backend marathon_uis if is_marathon_uri
 
-backend marathon-uis
-   balance roundrobin
-   mode http
-   server marathon1 marathon1.dsra.local
-   server marathon2 marathon2.dsra.local
+backend marathon_uis
+    balance roundrobin
+    server marathon1 10.105.0.1
+    server marathon2 10.105.0.3
+    server marathon3 10.105.0.5
+    server marathon4 10.105.0.7
+    server marathon5 10.105.0.9
+
+backend mesos_ui
+    balance roundrobin
+    server mesos5 10.105.0.5:5050 check
+    server mesos7 10.105.0.7:5050 backup
+    server mesos9 10.105.0.9:5050 backup
+    server mesos3 10.105.0.3:5050 backup
+    server mesos1 10.105.0.1:5050 backup
+
