Added commands to remove zookeeperX image prior to starting

--- a/coreos/fleet/zookeeper/zookeeper4.service
+++ b/coreos/fleet/zookeeper/zookeeper4.service
@@ -7,7 +7,8 @@ Requires=docker.services
 ExecStartPre=-/usr/bin/docker kill zookeeper4
 ExecStartPre=/usr/bin/docker pull endocode/zookeeper
 ExecStartPre=-/usr/bin/docker create --name zookeeper-data endocode/zookeeper /bin/true
-ExecStart=/usr/bin/docker run --name zookeeper4 --log-driver=journald --volumes-from zookeeper-data -e JVMFLAGS='-Xmx64m -Xms64M' -e ZK_SERVERS='server.1=r105u01.dsra.local:2888:3888 server.2=r105u03.dsra.local:2888:3888 server.3=r105u05.dsra.local:2888:3888 server.4=r105u07.dsra.local:2888:3888 server.5=r105u09.dsra.local:2888:3888' -e ZK_ID=4 --hostname r105u07 -p 2181:2181 -p 2888:2888 -p 3888:3888 endocode/zookeeper
+ExecStartPre=-/usr/bin/docker rm -v zookeeper4
+ExecStart=/usr/bin/docker run --name zookeeper4 --log-driver=journald --restart on-failure:5 --volumes-from zookeeper-data -e JVMFLAGS='-Xmx64m -Xms64M' -e ZK_SERVERS='server.1=r105u01.dsra.local:2888:3888 server.2=r105u03.dsra.local:2888:3888 server.3=r105u05.dsra.local:2888:3888 server.4=r105u07.dsra.local:2888:3888 server.5=r105u09.dsra.local:2888:3888' -e ZK_ID=4 --hostname r105u07 -p 2181:2181 -p 2888:2888 -p 3888:3888 endocode/zookeeper
 ExecStop=/usr/bin/docker stop zookeeper4
 TimeoutStartSec=900s
 
