--- a/coreos/fleet/mesosphere/marathon.service
+++ b/coreos/fleet/mesosphere/marathon.service
@@ -4,11 +4,11 @@ After=docker.service
 Requires=docker.service
 
 [Service]
-ExecStartPre=-/usr/bin/docker kill marathon
-ExecStartPre=-/usr/bin/docker rm marathon
+ExecStartPre=-/usr/bin/docker kill mesosphere/marathon:v0.11.0-RC4
+ExecStartPre=-/usr/bin/docker rm mesosphere/marathon:v0.11.0-RC4
 ExecStartPre=/usr/bin/docker pull mesosphere/marathon:v0.11.0-RC4
-ExecStart=/bin/bash -c "/usr/bin/docker run --name marathon --rm -p 80:80 -p 8282:8282 -p 9090:9090 -e MARATHON_HOSTNAME=`hostname`.dsra.local -e MARATHON_HTTP_PORT=80 -e MARATHON_ZK='zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/marathon' -e MARATHON_MASTER='zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos' mesosphere/marathon:v0.11.0-RC4 --checkpoint" 
-ExecStop=/usr/bin/docker stop marathon
+ExecStart=/bin/bash -c "/usr/bin/docker run --name marathon --rm --net=host -e MARATHON_HOSTNAME=$(hostname).dsra.local  -e MARATHON_HTTP_PORT=80 -e MARATHON_ZK='zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/marathon' -e MARATHON_MASTER='zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos' mesosphere/marathon:v0.11.0-RC4 --checkpoint" 
+ExecStop=/usr/bin/docker stop mesosphere/marathon:v0.11.0-RC4
 TimeoutStartSec=900s
 
 [X-Fleet]
