--- a/coreos/fleet/mesosphere/mesos-master.service
+++ b/coreos/fleet/mesosphere/mesos-master.service
@@ -7,8 +7,8 @@ Requires=docker.service
 User=core
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm %p
-ExecStartPre=/usr/bin/docker pull hub.dsra.local:5000/dsra/mesos-master:0.24.0-1.0.27.ubuntu1404
-ExecStart=/bin/bash -c "/usr/bin/docker run --net=host --name %p -v /data/log/mesos-master:/var/log/mesos -e MESOS_IP=$(hostname -i) -e MESOS_HOSTNAME=$(hostname).dsra.local  -e 'MESOS_LOG_DIR=/var/log/mesos' -e 'MESOS_ZK=zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos' -e 'MESOS_CLUSTER=DSRA' -e 'MESOS_QUORUM=5'  hub.dsra.local:5000/dsra/0.24.0-1.0.27.ubuntu1404
+ExecStartPre=/usr/bin/docker pull hub.dsra.local:5000/dsra/mesos-master:0.24.1-0.2.35.ubuntu1404
+ExecStart=/bin/bash -c "/usr/bin/docker run --net=host --name %p -v /data/log/mesos-master:/var/log/mesos -e MESOS_IP=$(hostname -i) -e MESOS_HOSTNAME=$(hostname).dsra.local  -e 'MESOS_LOG_DIR=/var/log/mesos' -e 'MESOS_ZK=zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos' -e 'MESOS_CLUSTER=DSRA' -e 'MESOS_QUORUM=5'  hub.dsra.local:5000/dsra/mesos-master:0.24.1-0.2.35.ubuntu1404"
 ExecStop=/usr/bin/docker stop %p
 TimeoutStartSec=900s
 
