Updated docker build files

--- a/docker/hue/hue.ini
+++ b/docker/hue/hue.ini
@@ -95,7 +95,7 @@
 
   # Comma separated list of apps to not load at server startup.
   # e.g.: beeswax,impala,security,filebrowser,jobbrowser,rdbms,jobsub,pig,hbase,sqoop,zookeeper,metastore,spark,oozie,indexer
-  app_blacklist=beeswax,impala,jobbrowser,rdbms,jobsub,pig,hbase,sqoop,zookeeper,metastore,solr,spark,oozie,indexer,yarn
+  app_blacklist=beeswax,impala,jobbrowser,rdbms,jobsub,pig,hbase,sqoop,security,zookeeper,metastore,search,spark,oozie,indexer,yarn
 
   # The directory where to store the auditing logs. Auditing is disable if the value is empty.
   # e.g. /var/log/hue/audit.log
@@ -573,7 +573,7 @@
 
     [[[default]]]
       # Enter the filesystem uri
-      fs_defaultfs=hdfs://r105u01.dsra.local:8020
+      fs_defaultfs=hdfs://r105u03.dsra.local:8020
 
       # NameNode logical name.
       ## logical_name=
@@ -581,7 +581,7 @@
       # Use WebHdfs/HttpFs as the communication mechanism.
       # Domain should be the NameNode or HttpFs host.
       # Default port is 14000 for HttpFs.
-      webhdfs_url=http://r105u01.dsra.local:50070/webhdfs/v1
+      webhdfs_url=http://r105u03.dsra.local:50070/webhdfs/v1
 
       # Change this if your HDFS cluster is Kerberos-secured
       ## security_enabled=false
@@ -604,7 +604,7 @@
       ## resourcemanager_port=8032
 
       # Whether to submit jobs to this cluster
-      submit_to=True
+      submit_to=False
 
       # Resource Manager logical name (required for HA)
       ## logical_name=
