--- a/coreos/fleet/mesosphere/chronos.service
+++ b/coreos/fleet/mesosphere/chronos.service
@@ -5,7 +5,7 @@ Requires=docker.service
 
 [Service]
 ExecStartPre=-/usr/bin/docker kill mesosphere/chronos
-ExecStartPre=-/usr/bin/docker rm mesosphere/chronos
+ExecStartPre=-/usr/bin/docker rm -v mesosphere/chronos
 ExecStartPre=/usr/bin/docker pull mesosphere/chronos:chronos-2.4.0-0.1.20150819174016.ubuntu1404-mesos-0.23.0-1.0.ubuntu1404
 ExecStart=/usr/bin/docker run -d -t -i --net=host --name chronos  mesosphere/chronos:chronos-2.4.0-0.1.20150819174016.ubuntu1404-mesos-0.23.0-1.0.ubuntu1404 /usr/bin/chronos --http_port 8081 --cluster_name DSRA --zk_hosts 10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181  --master zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos
 ExecStop=/usr/bin/docker stop mesosphere/chronos
@@ -14,4 +14,3 @@ TimeoutStartSec=900s
 [X-Fleet]
 Conflicts=%p@*.service
 MachineOf=mesos-master@%i.service
-
