MESOS DNS, Chronos and Hue changes

--- a/docker/mesos-dns/Dockerfile
+++ b/docker/mesos-dns/Dockerfile
@@ -1,4 +1,5 @@
-FROM mesosphere/mesos-dns
+# FROM mesosphere/mesos-dns
+FROM argussecurity/mesos-dns:0.4.0
 MAINTAINER Matt Parker <matthew.parker@l-3com.com>
 ADD dsra-mesos-dns.json /config.json
 EXPOSE 53
