--- a/coreos/fleet/hue/hue.service
+++ b/coreos/fleet/hue/hue.service
@@ -5,9 +5,9 @@ Requires=docker.service
 
 [Service]
 ExecStartPre=-/usr/bin/docker kill %p
-ExecStartPre=/usr/bin/docker pull aarongdocker/hue
+ExecStartPre=/usr/bin/docker pull hub.dsra.local:5000/dsra/hue:3.9.0
 ExecStartPre=-/usr/bin/docker rm -v %p
-ExecStart=/usr/bin/docker run --name %p --restart on-failure:5 --log-driver=journald -e CLUSTER_NAME=dsra -e HTTPFS_SERVER=httpfs.dsra.local -e HTTPFS_PORT=32000 -p 8000:8000 aarongdocker/hue start
+ExecStart=/usr/bin/docker run --name %p --restart on-failure:5 --log-driver=journald -e CLUSTER_NAME=dsra -e HTTPFS_SERVER=httpfs.dsra.local -e HTTPFS_PORT=32000 -p 8000:8000 hub.dsra.local:5000/dsra/hue:3.9.0 start
 ExecStop=/usr/bin/docker stop %p
 TimeoutStartSec=900s
 
