Added the hue proxy user to HTTPFS settings

--- a/docker/hadoop/httpfs/Dockerfile
+++ b/docker/hadoop/httpfs/Dockerfile
@@ -5,6 +5,10 @@ MAINTAINER Aaron Glahe <aarongmldt@gmail.com>
 USER root
 ENV HADOOP_USER httpfs
 
+# Copy the httpfs-site file to add Hue
+WORKDIR /usr/local/hadoop
+COPY httpfs-site.xml etc/hadoop/httpfs-site.xml
+
 # Add HADOOP_USER and setup permissions and ownership
 RUN groupadd -r $HADOOP_USER && useradd -r -g $HADOOP_USER -G hadoop $HADOOP_USER \
 && chown -R $HADOOP_USER:hadoop /usr/local/hadoop/
