Added HDFS to all the mesos slaves.  Udpated to Spark 1.5.2 in the mesos-slaves.  For the systemD file, made it multi-line since we are getting a bunch of args

--- a/docker/mesos-slave/Dockerfile
+++ b/docker/mesos-slave/Dockerfile
@@ -1,10 +1,37 @@
 FROM mesosphere/mesos-slave:0.25.0-0.2.70.ubuntu1404
 MAINTAINER Matt Parker <matthew.parker@l-3com.com>
 
+# Setup env
+USER root
+
+# Define commonly used JAVA_HOME variable
+ENV JAVA_HOME /usr/lib/jvm/java-7-openjdk-amd64
+
+ENV HADOOP_PREFIX /usr/local/hadoop
+ENV HADOOP_COMMON_HOME /usr/local/hadoop
+ENV HADOOP_HDFS_HOME /usr/local/hadoop
+ENV HADOOP_CONF_DIR /usr/local/hadoop/etc/hadoop
+
+# download wget, java & hadoop and spark
+RUN apt-get -y update && \
+ apt-get install -y openjdk-7-jdk wget && \
+ wget -q -O - http://apache.mirrors.pair.com/hadoop/common/hadoop-2.7.1/hadoop-2.7.1.tar.gz | tar -xzf - -C /usr/local && \
+ wget -q -O - http://apache.arvixe.com/spark/spark-1.5.2/spark-1.5.2-bin-hadoop2.6.tgz | tar -xzf - -C /usr/local && \
+ ln -s /usr/local/hadoop-2.7.1 /usr/local/hadoop && \
+ ln -s /usr/local/spark-1.5.2-bin-hadoop2.6 /usr/local/spark
+
+# Copy the Site files up
+WORKDIR /usr/local/hadoop
+COPY core-site.xml.template etc/hadoop/core-site.xml.template
+COPY hdfs-site.xml.template etc/hadoop/hdfs-site.xml.template
+
+# Copy the bootstrap shell
+COPY bootstrap.sh /bin/bootstrap.sh
+
 # Location to store data
 VOLUME ["/tmp/mesos"]
 
-# Adds Spark to each Mesos Master
-ADD http://apache.arvixe.com/spark/spark-1.5.1/spark-1.5.1-bin-hadoop2.6.tgz /opt/
-WORKDIR /opt
-RUN tar -xzf spark-1.5.1-bin-hadoop2.6.tgz
+# Entry Point for our
+ENV PATH $PATH:/usr/local/hadoop/bin
+ENTRYPOINT ["/bin/bootstrap.sh"]
+CMD ["mesos-slave"]
