--- a/coreos/fleet/mesosphere/mesos-slave.service
+++ b/coreos/fleet/mesosphere/mesos-slave.service
@@ -8,7 +8,31 @@ User=core
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -v %p
 ExecStartPre=/usr/bin/docker pull hub.dsra.local:5000/dsra/mesos-slave:0.25.0-0.2.70.ubuntu1404
-ExecStart=/usr/bin/docker run --privileged --net=host --name %p --restart=always -v /etc/docker.tar.gz:/etc/docker.tar.gz -v /sys:/sys -v /tmp:/tmp -v /usr/bin/docker:/bin/docker -v /var/run/docker.sock:/var/run/docker.sock -v /lib64/libdevmapper.so.1.02:/usr/lib/libdevmapper.so.1.02:ro -v /lib64/libpthread.so.0:/lib/libpthread.so.0:ro -v /lib64/libsqlite3.so.0:/lib/libsqlite3.so.0:ro -v /lib64/libudev.so.1:/lib/libudev.so.1:ro -e MESOS_SWITCH_USER=0 -e MESOS_LOG_DIR=/tmp/log -e MESOS_LOG_LEVEL=INFO -e MESOS_WORK_DIR=/tmp -e MESOS_DOCKER_SOCK=/var/run/docker.sock -e MESOS_ISOLATION=cgroups/cpu,cgroups/mem -e MESOS_MASTER=zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos -e MESOS_CONTAINERIZERS=docker,mesos -e MESOS_HOSTNAME=%H.dsra.local -e MESOS_EXECUTOR_REGISTRATION_TIMEOUT=5mins hub.dsra.local:5000/dsra/mesos-slave:0.25.0-0.2.70.ubuntu1404
+ExecStart=/usr/bin/docker run --privileged --net=host --name %p --restart=always \
+ -v /etc/docker.tar.gz:/etc/docker.tar.gz \
+ -v /sys:/sys -v /tmp:/tmp \
+ -v /usr/bin/docker:/bin/docker \
+ -v /var/run/docker.sock:/var/run/docker.sock \
+ -v /lib64/libdevmapper.so.1.02:/usr/lib/libdevmapper.so.1.02:ro \
+ -v /lib64/libpthread.so.0:/lib/libpthread.so.0:ro \
+ -v /lib64/libsqlite3.so.0:/lib/libsqlite3.so.0:ro \
+ -v /lib64/libudev.so.1:/lib/libudev.so.1:ro \
+ -e MESOS_SWITCH_USER=0 \
+ -e MESOS_LOG_DIR=/tmp/log \
+ -e MESOS_LOG_LEVEL=INFO \
+ -e MESOS_WORK_DIR=/tmp \
+ -e MESOS_DOCKER_SOCK=/var/run/docker.sock \
+ -e MESOS_ISOLATION=cgroups/cpu,cgroups/mem \
+ -e MESOS_MASTER=zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos \
+ -e MESOS_CONTAINERIZERS=docker,mesos \
+ -e MESOS_HOSTNAME=%H.dsra.local \
+ -e MESOS_EXECUTOR_REGISTRATION_TIMEOUT=5mins \
+ -e CLUSTER_NAME=dsra \
+ -e NNODE1_IP=r105u01.dsra.local \
+ -e NNODE2_IP=r105u03.dsra.local \
+ -e ZK_IPS=r105u01.dsra.local:2181,r105u03.dsra.local:2181,r105u05.dsra.local:2181,r105u07.dsra.local:2181,r105u09.dsra.local:2181 \
+ -e JN_IPS=r105u01.dsra.local:8485,r105u03.dsra.local:8485,r105u05.dsra.local:8485,r105u07.dsra.local:8485,r105u09.dsra.local:8485 \
+ hub.dsra.local:5000/dsra/mesos-slave:0.25.0-0.2.70.ubuntu1404
 ExecStop=/usr/bin/docker stop %p
 TimeoutStartSec=900s
 
