--- a/coreos/fleet/kafka.service
+++ b/coreos/fleet/kafka.service
@@ -6,15 +6,18 @@ Requires=docker.service
 [Service]
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=/usr/bin/docker pull aarongdocker/kafka
+ExecStartPre=-/usr/bin/docker create --name kafka-data aarongdocker/kafka /bin/true
 ExecStartPre=-/usr/bin/docker rm -v %p
-ExecStart=/usr/bin/docker run --name %p --restart on-failure:5 --log-driver=journald \
- -e BROKER_ID=`ifconfig bond0 | sed -n 2p | awk '{ print $2 }' | sed 's/\.//g'` \
+ExecStart=/usr/bin/bash -c "/usr/bin/docker run --name %p --restart on-failure:5 --log-driver=journald \
+ --volumes-from kafka-data \
+ -e BROKER_ID=`/usr/bin/ifconfig bond0 | /usr/bin/sed -n 2p | /usr/bin/awk '{ print $2 }' | /usr/bin/sed 's/\.//g'` \
  -e CLUSTER_NAME=dsra \
- -e ZK_IPS=r105u01:2181,r105u03:2181,r105u05:2181,r105u07:2181,r105u09:2181 \
+ -e ZK_IPS=r105u01.dsra.local:2181,r105u03.dsra.local:2181,r105u05.dsra.local:2181,r105u07.dsra.local:2181,r105u09.dsra.local:2181 \
  -e ADVERTISED_HOST=%H.dsra.local \
- -p 9092:9092 aarongdocker/kafka
+ -p 9092:9092 aarongdocker/kafka"
 ExecStop=/usr/bin/docker stop %p
 TimeoutStartSec=900s
 
 [X-Fleet]
-MachineMetadata=ip=10.105.0.1
+Global=true
+MachineMetadata=role=worker
