--- a/coreos/fleet/kafka-manager.service
+++ b/coreos/fleet/kafka-manager.service
@@ -8,7 +8,7 @@ ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=/usr/bin/docker pull sheepkiller/kafka-manager
 ExecStartPre=-/usr/bin/docker rm -v %p
 ExecStart=//usr/bin/docker run --name %p --restart on-failure:5 --log-driver=journald \
- -e ZK_IPS=r105u01.dsra.local:2181,r105u03.dsra.local:2181,r105u05.dsra.local:2181,r105u07.dsra.local:2181,r105u09.dsra.local:2181/dsra-kafka \
+ -e ZK_HOSTS=r105u01.dsra.local:2181,r105u03.dsra.local:2181,r105u05.dsra.local:2181,r105u07.dsra.local:2181,r105u09.dsra.local:2181 \
  -e APPLICATION_SECRET=pleaseletmeplaywiththeothers \
  -p 9000:9000 sheepkiller/kafka-manager
 ExecStop=/usr/bin/docker stop %p
