--- a/coreos/fleet/kafka.service
+++ b/coreos/fleet/kafka.service
@@ -13,11 +13,10 @@ ExecStart=/usr/bin/bash -c "/usr/bin/docker run --name %p --restart on-failure:5
  -e BROKER_ID=`/usr/bin/ifconfig bond0 | /usr/bin/sed -n 2p | /usr/bin/awk '{ print $2 }' | /usr/bin/sed 's/\.//g'` \
  -e CLUSTER_NAME=dsra \
  -e ZK_IPS=r105u01.dsra.local:2181,r105u03.dsra.local:2181,r105u05.dsra.local:2181,r105u07.dsra.local:2181,r105u09.dsra.local:2181 \
- -e ADVERTISED_HOST=%H.dsra.local \
+ -e ADVERTISED_HOST_NAME=%H.dsra.local \
  -p 9092:9092 -p 9999:9999 aarongdocker/kafka"
 ExecStop=/usr/bin/docker stop %p
 TimeoutStartSec=900s
 
 [X-Fleet]
-Global=true
-MachineMetadata=role=worker
+MachineMetadata=ip=10.105.0.1
