Needed to remove going to only one place

--- a/coreos/fleet/kafka.service
+++ b/coreos/fleet/kafka.service
@@ -19,4 +19,5 @@ ExecStop=/usr/bin/docker stop %p
 TimeoutStartSec=900s
 
 [X-Fleet]
-MachineMetadata=ip=10.105.0.1
+Global=true
+MachineMetadata=role=worker
